--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 h1{
-    color:black;
+
+    color:rgb(194, 61, 61);
+    text-align: center;
+    margin-top: 50px;
+    
+}
+p{
+    color: rgb(0, 0, 0);
+    font-size: 22px;
+
+}
+
+h2{
+    color: rgb(red, green, blue);
+    font-size: 42px;
+
+    
 }
